<resources>
    <string name="app_name">Team Up</string>
    <string name="send_button_name">Send</string>
    <string name="edit_text_hint">Input message</string>
    <string name="sign_in">Sing In</string>
    <string name="enter_email">Enter your Email...</string>
    <string name="enter_password">Enter your Password...</string>
    <string name="dhave_acc">You have no account?</string>
    <string name="btn_continue">Continue</string>
    <string name="Chat">Open chats</string>
    <string name="Settings">Settings</string>
    <string name="HiMessage">Hello</string>
    <string name="loading">Loading...</string>
    <string name="have_acc">You have account?</string>
    <string name="text_size">Choose text size</string>
    <string name="choose_text_size">Choose between 10 and 50</string>
    <string name="apply">Apply changes</string>
    <string name="change_nick">Change nickname</string>
    <string name="new_nick">Enter new nickname</string>
    <string name="btn_change_image">Change profile image</string>
    <string name="btn_change_back">Change background</string>
    <string name="choose_avatar">Choose your avatar</string>
    <string name="choose_background">Choose background</string>
    <string name="your_notes">Your notes</string>
    <string name="main_info">Main information</string>
    <string name="type">Type something...</string>
    <string name="btn_save_ch">Save changes</string>
    <string name="chara">Character</string>
    <string name="inter">Interests</string>
    <string name="hobbys">Hobbies</string>
    <string name="ch_notes">Chat notes</string>
    <string name="sign_up">Create account</string>
    <string name="group_info">Group information</string>
    <string name="group_number">Group number: </string>
    <string name="group_name">Group name: </string>
    <string name="group_hint1">Yours group name</string>
    <string name="group_hint2">*only for you</string>
    <string name="group_btn">Change group name</string>
    <string name="group_users">Group users</string>
    <string name="group_locked">You can not see them right now) \nWait a bit longer</string>
    <string name="your_groups">Your groups</string>
    <string name="message_info">Message information</string>
    <string name="message_text">Message:</string>
    <string name="message_delete">Delete message</string>
    <string name="message_report">Report</string>
    <string name="registration">Registration</string>
    <string name="step_2">Step 2</string>
    <string name="reg_surname">Enter your surname</string>
    <string name="reg_name">Enter your name</string>
    <string name="reg_lastname">Enter your last name(if you have one)</string>
    <string name="reg_school">Enter your school full name</string>
    <string name="reg_class">Enter your class(for example 10И1)</string>
    <string name="report_name">Write report</string>
    <string name="report_hint1">Text of your report</string>
    <string name="report_hint2">Enter your report</string>
    <string name="report_btn">Send report</string>
    <string name="group">Group</string>
    <string name="user_surname">Surname:</string>
    <string name="user_name">Name:</string>
    <string name="user_lastname">Last name:</string>
    <string name="help_report">Help report</string>
    <string name="mail">Your mail</string>
    <string name="report_text">Help report text</string>
    <string name="glitch_report">Glitch report</string>
    <string name="mail_to_send">Mail to send answer</string>
    <string name="glitch_text">Text of your report</string>
    <string name="glitch_hint">Enter your report(try to describe it fully)</string>
    <string name="probl_log">Having problems with logging?</string>
    <string name="press_here">Press here</string>
</resources>
