<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#1E88E5"
    android:paddingHorizontal="30dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="40dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enter_email"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:paddingLeft="60dp"
            android:background="@drawable/rectangular_field"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/email"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/enter_password"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:paddingLeft="60dp"
            android:background="@drawable/rectangular_field"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/password"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_back"
        android:textSize="25dp"
        android:textAllCaps="false"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dhave_acc"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            />
        <TextView
            android:id="@+id/signUpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="20dp"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/probl_log"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/press_here"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/t_help"
            />

    </LinearLayout>

</LinearLayout>