<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="#1E88E5"
    >

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Settings"
        android:textColor="#FFFFFF"
        android:textSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="35dp" />

    <Button
        android:id="@+id/btnChanAV"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="104dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_back"
        android:text="@string/btn_change_image"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnBackGR"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/button_back"
        android:text="@string/btn_change_back"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/btnChanAV"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/btn_glitchreport"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_back"
        android:text="@string/glitch_report"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackGR" />

</androidx.constraintlayout.widget.ConstraintLayout>